--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="images/ham.svg" alt="toggle.svg" class="menu" id="menu">
                 </a>
 
-                <ul class="show-desktop hide-desktop" id="nav">
+                <ul class="show-desktop hide-mobile" id="nav">
                     <li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Services</a></li>
@@ -27,6 +27,73 @@
                 </ul>
             </nav>
         </header>
+
+        <section>
+            <img src="images/server.svg" alt="server graphic" class="server">
+        
+            <h1>Web Hosting for the Modern Era</h1>
+            <p class="subhead">Go serverless and pay only for what you use</p>
+
+            <img src="images/scroll.svg" alt="scroll down" class="scroll hide-mobile show-desktop">
+        </section>
     </div>
+    <div class="blue-container">
+        <div class="container">
+            <ul>
+                <li>
+                    <img src="images/icon-1.svg" alt="Calendar icon">
+                    <p>This is the Calendar that will save you money.</p>
+                </li>
+                <li>
+                    <img src="images/icon-2.svg" alt="Calendar icon">
+                    <p>This is the Folder that will save you money.</p>
+                </li>
+                <li>
+                    <img src="images/icon-3.svg" alt="Calendar icon">
+                    <p>This is the Calendar that will save you money.</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="gray-container">
+        <div class="container">
+            <ul>
+                <li>
+                    <figure>
+                    <img src="images/user1.png" alt="User testimonial picture">
+                    <blockquote>I SWEAR THIS IS GOOD</blockquote>
+                    <caption>- Jane Doe</caption>
+                    </figure>   
+                </li>
+                <li>
+                    <figure>
+                    <img src="images/user2.png" alt="User testimonial picture">
+                    <blockquote>I SWEAR THIS IS MORE GOODER</blockquote>
+                    <caption>- John Doe</caption>
+                    </figure>   
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2>Start your free trial now!</h2>
+        <a href="#" class="cta">Get Started</a>
+    </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="container">
+                <a href="#">
+                    <img src="images/logo-white.svg" class="logo" alt="logo">
+                </a>   
+                <p class="address"> Melrose Place, 90210<br>USA</p>
+                <ul class="footer-links">
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
