used the w3 validation plugin

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                     <figure>
                     <img src="images/user1.png" alt="User testimonial picture">
                     <blockquote>I SWEAR THIS IS GOOD</blockquote>
-                    <caption>- Jane Doe</caption>
+                    <figure-caption>- Jane Doe</figure-caption>
                     </figure>   
                 </li>
                 <li>
                     <figure>
                     <img src="images/user2.png" alt="User testimonial picture">
                     <blockquote>I SWEAR THIS IS MORE GOODER</blockquote>
-                    <caption>- John Doe</caption>
+                    <figure-caption>- John Doe</figure-caption>
                     </figure>   
                 </li>
             </ul>
@@ -91,6 +91,7 @@
                 <ul class="footer-links">
                     <li><a href="#">Terms of Service</a></li>
                     <li><a href="#">Privacy Policy</a></li>
+                </ul>
             </div>
         </div>
     </footer>
